fix: P5-26 appendVotePanel 参数类型不兼容问题(ArrayList→List)